--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.thymeleaf.servlet.content-type=text/html
 #\u5F00\u53D1\u65F6\u5173\u95ED\u7F13\u5B58,\u4E0D\u7136\u6CA1\u6CD5\u770B\u5230\u5B9E\u65F6\u9875\u9762
 spring.thymeleaf.cache=false
 #thymeleaf end
+#bootstrap \u5339\u914D\u5230static\u6587\u4EF6\u4E2D\u7684\u8D44\u6E90
+#spring.mvc.static-path-pattern=/**
