--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.41</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -115,7 +116,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
-
+        <!--仅在springboot中支持的热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
