--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.datasource.useGlobalDataSourceStat=true
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
-#\u5F00\u53D1\u65F6\u5173\u95ED\u7F13\u5B58,\u4E0D\u7136\u6CA1\u6CD5\u770B\u5230\u5B9E\u65F6\u9875\u9762
+#\u5F00\u53D1\u65F6\u5173\u95ED\u7F13\u5B58,\u4EE5\u4FDD\u8BC1\u70ED\u90E8\u7F72\u53EF\u4EE5\u4F7F\u7528
 spring.thymeleaf.cache=false
 #thymeleaf end
-#bootstrap \u5339\u914D\u5230static\u6587\u4EF6\u4E2D\u7684\u8D44\u6E90
-#spring.mvc.static-path-pattern=/**
+#\u70ED\u90E8\u7F72\u4F7F\u80FD
+spring.devtools.restart.enabled=true
