--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-#jdbc
+#jdbc start
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/xinzhou_test?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=wcy
-#mybatis(mapper.xml)
+#jdbc end
+
+#mybatis(mapper.xml) start
 mybatis.mapper-locations=classpath:mapper/*.xml
-# druid \u521D\u59CB\u5316\u5927\u5C0F
+#mybatis(mapper.xml) end
+
+# druid start
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -21,7 +25,11 @@ spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,slf4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#\u5F00\u542F\u4E8C\u7EA7\u7F13\u5B58
+spring.datasource.cachePrepStmts=true
 spring.datasource.useGlobalDataSourceStat=true
+# druid end
+
 #thymeleaf start
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
@@ -29,5 +37,6 @@ spring.thymeleaf.servlet.content-type=text/html
 #\u5F00\u53D1\u65F6\u5173\u95ED\u7F13\u5B58,\u4EE5\u4FDD\u8BC1\u70ED\u90E8\u7F72\u53EF\u4EE5\u4F7F\u7528
 spring.thymeleaf.cache=false
 #thymeleaf end
+
 #\u70ED\u90E8\u7F72\u4F7F\u80FD
 spring.devtools.restart.enabled=true
