--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,14 @@ spring.thymeleaf.cache=false
 
 #\u70ED\u90E8\u7F72\u4F7F\u80FD
 spring.devtools.restart.enabled=true
+
+#redis start
+spring.redis.host=10.52.200.73
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.jedis.pool.max-active=1000
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=2
+spring.redis.timeout=5000
+#redis end
